# better_thermostat

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  requirements.dev.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: hassfest.yaml  pages.yml  ruff.yml  tests.yaml  types.yaml  validate.yaml
blueprints/: battery_low_notify.yaml  device_error_notify.yaml  heating_active_notify.yaml  humidity_high_alert.yaml  night_mode.yaml  presence_away_preset.yaml  weekly_heating_schedule.yaml  window_heating_control.yaml
custom_components/better_thermostat/: __init__.py  calibration.py  climate.py  config_flow.py  device_binding.py  device_trigger.py  diagnostics.py  manifest.json  number.py  sensor.py  services.yaml  strings.json  switch.py  trv.py
docs/: hydraulic_balance_design.md  index.mdx  schedule.md  support.md
docs/Configuration/: algorithms.md  configuration.md
docs/Q&A/: qanda.md  supported.md
docs/deep-explanations/: hydraulic-balance.md  schedule-and-night-mode.md
docs/faq/: common-questions.md  debugging.md  degraded-mode.md  missing-entity.md  window-sensor.md
docs/internals/: architecture.md  calibration.md  design-decisions.md  observability-and-testing.md  persistence.md  regions.md  safety-and-degradation.md  writes-and-reconciliation.md
docs/optimal-settings/: algorithm-selection.md  recommended-settings.md
docs/setup/: automation-blueprints.md  configuration-walkthrough.md  configurator.mdx  getting-started.md
docs/working-devices/: compatibility.md  recommended-devices.md
scripts/: docker  setup  start  upgrade-dev  upgrade-version
tests/: factories.py  test_adapters_none_handling.py  test_aggressive_calibration.py  test_calibration_default_mode.py  test_controller_state_contract.py  test_fallback_mode.py  test_heating_tolerance.py  test_mpc.py  test_pid.py  test_tpi.py  test_translations.py  test_window_no_off_mode.py
tests/benchmark/: DESIGN.md  README.md  __init__.py  actuator.py  metrics.py  multi_trv_plant.py  multi_trv_runner.py  plant.py  reporter.py  runner.py  scenarios.py  schedules.py  scoring.py  sensor.py
tests/benchmark/adapters/: __init__.py  (+8 more)
tests/integration/: conftest.py  test_entry_lifecycle.py
tests/unit/: test_bth_rm230z_quirk.py  test_calibration_heating_power.py  test_calibration_mode_traits.py  test_calibration_mpc_state_manager.py  test_calibration_pid_state_manager.py  test_calibration_tpi_state_manager.py  test_calibrator_health_annunciation.py  test_calibrator_strategy.py  test_climate_baseline.py  test_climate_build_snapshots.py  test_climate_ema_periodic.py  test_climate_maintenance.py  test_climate_persistence.py  test_climate_reset_pid.py  test_climate_run_maintenance.py  test_climate_set_hvac_mode.py  test_climate_startup.py  test_config_flow_normalize.py  test_containers.py  test_cooler_events.py  test_core_clock.py  test_core_decide.py  test_core_safety.py  test_desired_state.py  test_diagnostics.py  test_factories.py  test_fail_soft_behavior.py  test_flight_recorder.py  test_fsm_control_mode.py  test_fsm_ladder.py  test_fsm_lifecycle.py  test_fsm_maintenance.py  test_fsm_mode.py  test_fsm_reachability.py  test_fsm_sweeps.py  test_fsm_window.py  test_helpers_group_off.py  test_helpers_mode_remap.py  test_helpers_normalize.py  test_helpers_setpoint_range.py  (+30 more)
website/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
(+119 files in other folders)
